2011-06-22  Rob Buis  <rbuis@rim.com>

Reviewed by Nikolas Zimmermann.

        SVG1.1SE test with pointer-events and invalid gradient fill fails
        https://bugs.webkit.org/show_bug.cgi?id=63109

        * platform/mac/svg/W3C-SVG-1.1-SE/interact-pointer-03-t-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/interact-pointer-03-t-expected.txt: Added.
        * svg/W3C-SVG-1.1-SE/interact-pointer-03-t.svg: Added.
        * svg/custom/pointer-events-invalid-fill-expected.txt: Added.
        * svg/custom/pointer-events-invalid-fill.svg: Added.
2011-06-22  Rob Buis  <rbuis@rim.com>

        Reviewed by Nikolas Zimmermann.

        SVG1.1SE test with pointer-events and invalid gradient fill fails
        https://bugs.webkit.org/show_bug.cgi?id=63109

        Properly detect fill/stroke properties of type SVG_PAINTTYPE_URI_NONE, store it in SVGPaint
        and don't apply the paint if the uri lookup fails.

        Tests: svg/W3C-SVG-1.1-SE/interact-pointer-03-t.svg
               svg/custom/pointer-events-invalid-fill.svg

        * css/SVGCSSParser.cpp:
        (WebCore::CSSParser::parseSVGValue):
        * rendering/svg/RenderSVGResource.cpp:
        (WebCore::requestPaintingResource):
        * svg/SVGPaint.h:
        (WebCore::SVGPaint::createURIAndNone):


Canonical link: https://commits.webkit.org/78800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89490 268f45cc-cd09-0410-ab3c-d52691b4dbfc