Source/WebCore/svg/SVGPaint.h
@@ -79,6 +79,12 @@ public:
         return paint.release();
     }
 
+    static PassRefPtr<SVGPaint> createURIAndNone(const String& uri)
+    {
+        RefPtr<SVGPaint> paint = adoptRef(new SVGPaint(SVG_PAINTTYPE_URI_NONE, uri));
+        return paint.release();
+    }
+
     const SVGPaintType& paintType() const { return m_paintType; }
     String uri() const { return m_uri; }
 
